[project]
name = "signer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "paramiko>=4",
    "pyyaml>=6.0.2",
    "sshkey-tools>=0.11.3",
    "click>=8.1.7",
    "types-paramiko>=4.0.0.20250822",
    "fido2>=2.0.0",
]

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
    "ipython>=8.18.1",
]
